--- a/src/stylesheets/application.css
+++ b/src/stylesheets/application.css
@@ -1,8 +1,9 @@
-@import url('~normalize.css/normalize.css');
+@import url('~bootstrap/dist/css/boostrap.css');
+/* @import url('~normalize.css/normalize.css');
 
 * {
   box-sizing: border-box;
-}
+} */
 
 /* TODO */
 
